--- a/Project/ex19m02/src/hover.html
+++ b/Project/ex19m02/src/hover.html
@@ -26,8 +26,8 @@
 </head>
 <body>
     <h1>Exemeplo de hover</h1>
-    <p>Passa o mause sobre o texto abaixo</p>
-    <div>Passe o mause aqui
+    <p>Passa o mouse sobre o texto abaixo</p>
+    <div>Passe o mouse aqui
         <p>Texto escondido...</p>
     </div>
 </body>
